# src/MCP.Views/mcp-chat-ui/openapi/backend.openapi.json
@@ -312,7 +312,7 @@
                   "additionalProperties": {
                     "type": "array",
                     "items": {
-                      "$ref": "#/components/schemas/McpToolDescription"
+                      "$ref": "#/components/schemas/McpClientToolDescription"
                     }
                   }
                 }
@@ -493,6 +493,31 @@
           }
         }
       }
+    },
+    "/mcp-client-descriptions": {
+      "get": {
+        "tags": [
+          "McpClientDescription"
+        ],
+        "summary": "Get all MCP client descriptions",
+        "description": "Returns all MCP client descriptions for all configured servers",
+        "operationId": "GetAllMcpClientDescriptions",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "$ref": "#/components/schemas/McpClientDescription"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -508,6 +533,12 @@
           },
           {
             "$ref": "#/components/schemas/AiContentAppModelErrorContentAppModel"
+          },
+          {
+            "$ref": "#/components/schemas/AiContentAppModelFunctionCallContentAppModel"
+          },
+          {
+            "$ref": "#/components/schemas/AiContentAppModelFunctionResultContentAppModel"
           },
           {
             "$ref": "#/components/schemas/AiContentAppModelTextContentAppModel"
@@ -527,6 +558,8 @@
           "mapping": {
             "data": "#/components/schemas/AiContentAppModelDataContentAppModel",
             "error": "#/components/schemas/AiContentAppModelErrorContentAppModel",
+            "function_call": "#/components/schemas/AiContentAppModelFunctionCallContentAppModel",
+            "function_result": "#/components/schemas/AiContentAppModelFunctionResultContentAppModel",
             "text": "#/components/schemas/AiContentAppModelTextContentAppModel",
             "reasoning": "#/components/schemas/AiContentAppModelTextReasoningContentAppModel",
             "uri": "#/components/schemas/AiContentAppModelUriContentAppModel",
@@ -673,6 +706,75 @@
           "message": {
             "type": "string"
           },
+          "annotations": {
+            "type": "array",
+            "items": {
+              "discriminator": {
+                "propertyName": "$type",
+                "mapping": {
+                  "citation": "#/components/schemas/AiAnnotationAppModelCitationAnnotationAppModel"
+                }
+              }
+            },
+            "nullable": true
+          }
+        }
+      },
+      "AiContentAppModelFunctionCallContentAppModel": {
+        "required": [
+          "call_id",
+          "name",
+          "arguments",
+          "annotations"
+        ],
+        "properties": {
+          "$type": {
+            "enum": [
+              "function_call"
+            ],
+            "type": "string"
+          },
+          "call_id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "arguments": {
+            "type": "object",
+            "nullable": true
+          },
+          "annotations": {
+            "type": "array",
+            "items": {
+              "discriminator": {
+                "propertyName": "$type",
+                "mapping": {
+                  "citation": "#/components/schemas/AiAnnotationAppModelCitationAnnotationAppModel"
+                }
+              }
+            },
+            "nullable": true
+          }
+        }
+      },
+      "AiContentAppModelFunctionResultContentAppModel": {
+        "required": [
+          "call_id",
+          "result",
+          "annotations"
+        ],
+        "properties": {
+          "$type": {
+            "enum": [
+              "function_result"
+            ],
+            "type": "string"
+          },
+          "call_id": {
+            "type": "string"
+          },
+          "result": { },
           "annotations": {
             "type": "array",
             "items": {
@@ -1267,6 +1369,242 @@
           }
         }
       },
+      "McpClientAnnotationsDescription": {
+        "required": [
+          "audience",
+          "priority",
+          "lastModified"
+        ],
+        "type": "object",
+        "properties": {
+          "audience": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientRoleDescription"
+            },
+            "nullable": true
+          },
+          "priority": {
+            "type": "number",
+            "format": "float",
+            "nullable": true
+          },
+          "lastModified": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          }
+        },
+        "nullable": true
+      },
+      "McpClientDescription": {
+        "required": [
+          "tools",
+          "prompts",
+          "resource_templates",
+          "resources"
+        ],
+        "type": "object",
+        "properties": {
+          "tools": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientToolDescription"
+            }
+          },
+          "prompts": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientPromptDescription"
+            }
+          },
+          "resource_templates": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientResourceTemplateDescription"
+            }
+          },
+          "resources": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientResourceDescription"
+            }
+          }
+        }
+      },
+      "McpClientPromptArgumentDescription": {
+        "required": [
+          "name",
+          "title",
+          "description",
+          "required"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "required": {
+            "type": "boolean",
+            "nullable": true
+          }
+        }
+      },
+      "McpClientPromptDescription": {
+        "required": [
+          "name",
+          "title",
+          "description",
+          "arguments",
+          "_meta"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "arguments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/McpClientPromptArgumentDescription"
+            },
+            "nullable": true
+          },
+          "_meta": {
+            "$ref": "#/components/schemas/NullableOfJsonElement"
+          }
+        }
+      },
+      "McpClientResourceDescription": {
+        "required": [
+          "name",
+          "title",
+          "uri",
+          "description",
+          "mimeType",
+          "annotations",
+          "size",
+          "_meta"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "uri": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "mimeType": {
+            "type": "string",
+            "nullable": true
+          },
+          "annotations": {
+            "$ref": "#/components/schemas/McpClientAnnotationsDescription"
+          },
+          "size": {
+            "type": "integer",
+            "format": "int64",
+            "nullable": true
+          },
+          "_meta": {
+            "$ref": "#/components/schemas/NullableOfJsonElement"
+          }
+        }
+      },
+      "McpClientResourceTemplateDescription": {
+        "required": [
+          "name",
+          "title",
+          "uriTemplate",
+          "description",
+          "mimeType",
+          "annotations",
+          "_meta"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "uriTemplate": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "mimeType": {
+            "type": "string",
+            "nullable": true
+          },
+          "annotations": {
+            "$ref": "#/components/schemas/McpClientAnnotationsDescription"
+          },
+          "_meta": {
+            "$ref": "#/components/schemas/NullableOfJsonElement"
+          }
+        }
+      },
+      "McpClientRoleDescription": {
+        "enum": [
+          "assistant",
+          "user"
+        ]
+      },
+      "McpClientToolDescription": {
+        "required": [
+          "name",
+          "description",
+          "input_schema",
+          "output_schema"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "input_schema": {
+            "$ref": "#/components/schemas/JsonElement"
+          },
+          "output_schema": {
+            "$ref": "#/components/schemas/NullableOfJsonElement"
+          }
+        }
+      },
       "McpServerConfigurationItem": {
         "required": [
           "category",
@@ -1315,30 +1653,6 @@
           "http"
         ],
         "default": "stdio"
-      },
-      "McpToolDescription": {
-        "required": [
-          "name",
-          "description",
-          "input_schema",
-          "output_schema"
-        ],
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "input_schema": {
-            "$ref": "#/components/schemas/JsonElement"
-          },
-          "output_schema": {
-            "$ref": "#/components/schemas/NullableOfJsonElement"
-          }
-        }
       },
       "NullableOfChatFinishReasonAppModel": {
         "enum": [
@@ -1440,6 +1754,9 @@
     },
     {
       "name": "McpServerConfiguration"
+    },
+    {
+      "name": "McpClientDescription"
     }
   ]
 }
